proj1/tests/other-tests/oskis-angels_tests/regexperts_tests/correct/expr_arr.py
x = [1, 2, 3]
print x[1]
y = [[1], 2, [3, [4]], []]
print y[0]
print y[0][0]
print y[2][1]
print y[2][1][0]
print y[3]
