proj1/tests/other-tests/oskis-angels_tests/regexperts_tests/error/expr_bad_arr_index.py
x = [1, 2, 3]
print x[[1]]
print x1]
print x[1][1]